// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login Renders properly 1`] = `
<nav
  className="navbar navbar-expand-lg navbar-dark bg-dark"
>
  <a
    className="navbar-brand App-title"
    href="/"
  >
    Yummy Recipes
  </a>
  <button
    aria-controls="navbarSupportedContent"
    aria-expanded="false"
    aria-label="Toggle navigation"
    className="navbar-toggler"
    data-target="#navbarSupportedContent"
    data-toggle="collapse"
    type="button"
  >
    <span
      className="navbar-toggler-icon"
    />
  </button>
  <div
    className="collapse navbar-collapse"
    id="navbarSupportedContent"
  >
    <ul
      className="navbar-nav mr-auto"
    >
      <li
        className="nav-item active"
      >
        <a
          href="/"
        >
          Home
        </a>
      </li>
    </ul>
    <ul
      className="navbar-nav flex-row ml-md-auto d-none d-md-flex"
    >
      <li
        className="nav-item active"
      >
        <a
          href="/signup"
        >
          Sign Up
        </a>
      </li>
      <li
        className="nav-item active"
      >
        <a
          href="/login"
        >
          Login
        </a>
      </li>
    </ul>
  </div>
</nav>
`;

exports[`Login Renders properly when user is logged in 1`] = `
<nav
  className="navbar navbar-expand-lg navbar-dark bg-dark"
>
  <a
    className="navbar-brand App-title"
    href="/"
  >
    Yummy Recipes
  </a>
  <button
    aria-controls="navbarSupportedContent"
    aria-expanded="false"
    aria-label="Toggle navigation"
    className="navbar-toggler"
    data-target="#navbarSupportedContent"
    data-toggle="collapse"
    type="button"
  >
    <span
      className="navbar-toggler-icon"
    />
  </button>
  <div
    className="collapse navbar-collapse"
    id="navbarSupportedContent"
  >
    <ul
      className="navbar-nav mr-auto"
    >
      <li
        className="nav-item active"
      >
        <a
          href="/"
        >
          Home
        </a>
      </li>
    </ul>
    <ul
      className="navbar-nav flex-row ml-md-4 d-none d-md-flex"
    >
      <span
        className="App-title text-white"
      >
        Welcome 
        Mark
      </span>
      <li
        className="nav-item"
      >
        <button
          className="nav-link btn btn-outline-danger"
          style={
            Object {
              "color": "white",
            }
          }
        >
          Logout
        </button>
      </li>
    </ul>
  </div>
</nav>
`;
